[gd_scene load_steps=12 format=3 uid="uid://d164mj1wu1tmj"]

[ext_resource type="Script" path="res://Player/rp_player.gd" id="1_v6btl"]
[ext_resource type="Shader" path="res://Player/rp_player.gdshader" id="2_35n2b"]
[ext_resource type="Texture2D" uid="uid://r6u3ivx8seh7" path="res://Assets/test_crosshair.svg" id="2_60ysw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bkgce"]
shader = ExtResource("2_35n2b")

[sub_resource type="Animation" id="Animation_6bqpe"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.10625, 0.10625)]
}

[sub_resource type="Animation" id="Animation_t1iwu"]
resource_name = "click"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-9.77384, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.10625, 0.10625), Vector2(0.053, 0.053), Vector2(0.106, 0.106)]
}

[sub_resource type="Animation" id="Animation_bdump"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-3.14159, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cdu8x"]
_data = {
"RESET": SubResource("Animation_6bqpe"),
"click": SubResource("Animation_t1iwu"),
"idle": SubResource("Animation_bdump")
}

[sub_resource type="Curve" id="Curve_ewrer"]
_data = [Vector2(0, 0.989011), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_5pu2q"]
radius = 73.0274

[sub_resource type="Curve" id="Curve_hsivq"]
_data = [Vector2(0.00728154, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.00659347), 0.0, 0.0, 0, 0]
point_count = 2

[node name="cursor2" type="CharacterBody2D"]
rotation = -3.14159
scale = Vector2(0.10625, 0.10625)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_v6btl")

[node name="cursor_sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_bkgce")
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_60ysw")

[node name="MouseAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cdu8x")
}
autoplay = "idle"

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 60
lifetime = 0.5
one_shot = true
explosiveness = 1.0
randomness = 0.25
lifetime_randomness = 0.42
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1000.0
initial_velocity_max = 2000.0
orbit_velocity_min = -1.0
orbit_velocity_max = 1.0
scale_amount_min = 4.0
scale_amount_max = 8.0
scale_amount_curve = SubResource("Curve_ewrer")
color = Color(0.866822, 0.927288, 0.970766, 1)

[node name="cursor_collision_box" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(-5.26135e-06, -5.72205e-05)
shape = SubResource("CircleShape2D_5pu2q")

[node name="trail" type="Line2D" parent="."]
top_level = true
width = 5.0
width_curve = SubResource("Curve_hsivq")

[node name="death_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="animation_finished" from="MouseAnimation" to="." method="_on_mouse_animation_animation_finished"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
